fix(scss/css): Changed files structure and and changed variables
Using a different SASS compiler which suffixes minified files with .min.css, so removed the old files with .css. Also fixed an error where some variables in the header, footer, and scrollbar files still had text- and background- instead of just the part after.

--- a/styles/scss/partials/_footer.scss
+++ b/styles/scss/partials/_footer.scss
@@ -1,7 +1,7 @@
 #footer {
   // Flexbox
   display: flex;
-  background: $background-dark;
+  background: $dark;
   justify-content: center;
   align-items: center;
 
@@ -19,7 +19,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    fill: $text-light;
-    color: $text-light;
+    fill: $light;
+    color: $light;
   }
 }
