--- a/styles/scss/partials/_header.scss
+++ b/styles/scss/partials/_header.scss
@@ -14,8 +14,8 @@
   height: $header-footer-height;
 
   // Colours
-  background: $background-light;
-  color: $text-dark;
+  background: $light;
+  color: $dark;
 
   #header__title {
     font-weight: bold;
@@ -30,6 +30,6 @@
   }
 
   #header__nav a {
-    color: $text-dark;
+    color: $dark;
   }
 }
