--- a/styles/scss/partials/_scrollbar.scss
+++ b/styles/scss/partials/_scrollbar.scss
@@ -4,9 +4,9 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: $background-l;
+  background: $light;
 }
 
 ::-webkit-scrollbar-track {
-  background: $background-dark;
+  background: $dark;
 }
